# StreetStoryCurator

./: .gitignore  BUILD.md  CLAUDE.md  ENHANCEMENT_OPPORTUNITIES.md  GRADING_EXPLANATION.md  INSTALL.md  Install Shortcut.bat  MODELS.md  README.md  SEQUENCING_EXPLANATION.md  SPECVLM_INTEGRATION_GUIDE.md  Setup.bat  Setup.ps1  Start.bat  Start.command  StreetStoryCurator.spec  architecture.md  audit.py  build-backend.bat  build-backend.sh  build_tauri.bat  create_shortcut.bat  create_streetphotocurator_shortcut.bat  create_streetphotocurator_shortcut.ps1  create_windows_shortcut.ps1  debug_score.py  dev.ps1  install_deps.bat  install_shortcut.ps1  integrate_models.py  kill_ports.ps1  launch.bat  launch_hidden.vbs  main.py  make_shortcut.ps1  nima_setup.py  requirements.txt  run_local.bat  server.py  train_sequence_scorer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
src/: app.py  app.py.original  background_dpo_trainer.py  clean_modify_script.py  convert_to_lance.py  creative_director.py  creative_director_agent.py  deepseek_model.py  desktop_app.py  early_exit_gate.py  editorial_renderer.py  engine_utils.py  exif_handler.py  fast_ingestion.py  fast_io.py  final_clean_script.py  final_modify.py  flux_stylizer.py  frontier_config.py  grade_pipeline_v2.py  human_grader.py  lance_migration.py  lance_store.py  lightweight_analyzer.py  modify_app.py  (+33 more)
(+9 files in other folders)
