[package]
name = "street-story-curator"
version = "1.0.0"
description = "Street Story Curator — offline street photography grading & sequencing"
authors = ["Street Story Curator"]
edition = "2021"

[lib]
name = "street_story_curator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "street-story-curator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["devtools"] }
tauri-plugin-shell  = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
ureq           = "2"

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
